assessing linearity of ozone

--- a/ch14/case1401.ipynb
+++ b/ch14/case1401.ipynb
@@ -133,7 +133,9 @@
    "id": "aa072422-8fea-4f2b-aa8a-c42c356d3aa2",
    "metadata": {},
    "source": [
-    "# Multiple Comparisons of Sign Effects"
+    "# Multiple Comparisons of Sign Effects\n",
+    "\n",
+    "List the 10 pairs of signs where the evidence of a difference is strongest."
    ]
   },
   {
@@ -148,7 +150,7 @@
     "# not as straightforward as you would hope\n",
     "results_df = pd.DataFrame(data=res.summary().data[1:], columns=res.summary().data[0])\n",
     "\n",
-    "print(results_df[results_df['reject']])"
+    "print(results_df.sort_values(by='p-adj').head(n=10))"
    ]
   },
   {
