add serial correlation tests

--- a/ch15/case1501.ipynb
+++ b/ch15/case1501.ipynb
@@ -27,6 +27,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from scipy.stats import norm\n",
     "import seaborn as sns\n",
     "import statsmodels.formula.api as smf\n",
     "from statsmodels.stats.anova import anova_lm\n",
@@ -110,9 +111,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4d2c846f-392d-44e6-a47d-0bb85aabeea3",
+   "metadata": {},
+   "source": [
+    "## Is serial correlation even present?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13915fa2-fc77-4ba3-97b9-171ae61b9e95",
+   "id": "ac0e9c06-6f74-4ba9-ab4e-7f678a13edca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resid = df['NoCut'] - df['NoCut'].mean()\n",
+    "num_runs = (np.abs(np.sign(resid).diff()) > 0).sum() + 1\n",
+    "m = (resid < 0).sum()\n",
+    "p = (resid > 0).sum()\n",
+    "mu = (2 * m * p) / ( m + p) + 1\n",
+    "sigma = np.sqrt((2 * m * p) * (2 * m * p - m - p) / ((m + p) ** 2 * (m + p + 1)))\n",
+    "z = (num_runs - mu + 0.5) / sigma\n",
+    "p = (1 - norm.cdf(np.abs(z))) * 2\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15bd3992-3ee3-441d-bcef-6ae3b8f0a681",
    "metadata": {},
    "outputs": [],
    "source": []
