--- a/ch15/case1502.ipynb
+++ b/ch15/case1502.ipynb
@@ -19,6 +19,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from scipy.stats import norm\n",
     "import seaborn as sns\n",
     "import statsmodels.formula.api as smf\n",
     "from statsmodels.stats.anova import anova_lm\n",
@@ -91,9 +92,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f4ba7b0-1898-412a-917a-f61128dae87a",
+   "metadata": {},
+   "source": [
+    "## Regression with Filtered Variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aeec544-aa0a-469c-84a5-b60849640344",
+   "id": "00686482-6561-4ea5-8513-80b2d73a9a3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['u'] = df['t'] - r1 * df['t'].shift(1)\n",
+    "df['v'] = df['Temperature'] - r1 * df['Temperature'].shift(1)\n",
+    "filtered_model = smf.ols('v ~ u + I(u ** 2)', data=df).fit()\n",
+    "filtered_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43052236-a4b3-47b7-a70c-b226360e5e15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anova_lm(filtered_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab26a20d-789e-4786-b53f-f060453b4e87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(nrows=2)\n",
+    "sns.lineplot(x=df['Year'], y=model.resid, ax=axes[0])\n",
+    "sns.lineplot(x=df['Year'], y=filtered_model.resid, ax=axes[1])\n",
+    "axes[0].set_ylabel('\\N{DEGREE SIGN} C')\n",
+    "axes[1].set_ylabel('\\N{DEGREE SIGN} C')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d95c05c-d4a4-4944-b0f2-66d201135de1",
+   "metadata": {},
+   "source": [
+    "## Was serial correlation even present?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e85b6615-819b-4276-8d1d-6157926ce47b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_runs = (np.abs(np.sign(filtered_model.resid).diff()) > 0).sum() + 1\n",
+    "m = (filtered_model.resid < 0).sum()\n",
+    "p = (filtered_model.resid > 0).sum()\n",
+    "mu = (2 * m * p) / ( m + p) + 1\n",
+    "sigma = np.sqrt((2 * m * p) * (2 * m * p - m - p) / ((m + p) ** 2 * (m + p + 1)))\n",
+    "z = (num_runs - mu + 0.5) / sigma\n",
+    "p = (1 - norm.cdf(np.abs(z))) * 2\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b723e09c-0f7e-4813-81c4-82809059d109",
    "metadata": {},
    "outputs": [],
    "source": []
