--- a/ch15/case1501.ipynb
+++ b/ch15/case1501.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "# 3rd party library imports\n",
+    "from IPython.display import Markdown as md\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -137,11 +138,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15bd3992-3ee3-441d-bcef-6ae3b8f0a681",
+   "cell_type": "markdown",
+   "id": "290acb20-a05f-4f97-93e8-bc0f89a52495",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "There is strong evidence of a serial effect ($Z = -6.398$, $p < 0.0001$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38482e98-4144-433f-a9a4-0f7d9cd144af",
+   "metadata": {},
    "source": []
   }
  ],
