--- a/ch16/case1601.ipynb
+++ b/ch16/case1601.ipynb
@@ -211,9 +211,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "244abe52-48df-4394-a414-9b21b2638d83",
+   "metadata": {},
+   "source": [
+    "The control monkey seem to have higher success with short-term (<= 4 weeks) items than do the treatment monkeys."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3199a139-f2c0-4ea3-8107-6100571de65d",
+   "id": "6640a28b-e071-4719-a400-33560851dc8b",
    "metadata": {},
    "outputs": [],
    "source": []
