--- a/ch12/case1201.ipynb
+++ b/ch12/case1201.ipynb
@@ -67,21 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ranking After Accounting For Relative Student Quality"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Ranking After Accounting For State Expenditure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Matrix of Scatterplots For SAT Scores And Explanatory Variables"
+    "# Display 12.4:  Matrix of scatterplots for SAT scores and explanatory variables"
    ]
   },
   {
@@ -90,14 +76,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.pairplot(df)"
+    "cols = ['Rank', 'Takers', 'Years', 'Income', 'Public', 'Expend', 'SAT']\n",
+    "g = sns.pairplot(df[cols])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Expend* shows one big outlier, Alaska, lying 4.4 standard deviations away from the mean."
+    "The SAT/Takers scatterplots indicate a non-linearity, so apply the logarithmic transform to the **Takers** variable."
    ]
   },
   {
@@ -106,12 +93,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "formula = 'SAT ~ Takers + Income + Years + Public + Expend + Rank' \n",
-    "model = smf.ols(formula=formula, data=df) \n",
-    "model_fit = model.fit()  \n",
-    "infl = model_fit.get_influence()\n",
-    "fig, ax = plt.subplots()\n",
-    "sm.graphics.influence_plot(model_fit, criterion='cooks', ax=ax)"
+    "df['logTakers'] = np.log(df['Takers'])\n",
+    "cols.remove('Takers')\n",
+    "cols.insert(1, 'logTakers')\n",
+    "g = sns.pairplot(df[cols])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Expend* clearly has an outlier (Alaska) and *Public* may have one (Louisiana)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preliminary Analysis"
    ]
   },
   {
@@ -120,14 +119,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[df.index.isin([21, 28])]\n"
+    "formula = 'SAT ~ logTakers + Rank'\n",
+    "model = smf.ols(formula=formula, data=df).fit()\n",
+    "model.summary()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alaska shows both a high Studentized Residual and high leverage.  Louisiana also shows high leverage, but not a high studentized residual.  Alaska's relatively high expenditure may be due to both the extreme climate and remoteness of smaller schools."
+    "The takers and class rank variables explain 81% of the total variation.  Look at the effect of *Expend* on SAT scores after taking *Takers* and *Rank* into account."
    ]
   },
   {
@@ -136,42 +137,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "formula = 'SAT ~ Takers + Income + Years + Public + Expend + Rank'\n",
-    "model = smf.ols(formula=formula, data=df)\n",
-    "model_fit = model.fit()\n",
-    "\n",
-    "part_resid = model_fit.resid + model_fit.params['Expend'] * df['Expend']\n",
-    "fig, ax = plt.subplots()\n",
-    "sns.scatterplot(df['Expend'], part_resid, ax=ax)\n",
-    "ax.set_ylabel('Partial Residual')\n",
-    "\n",
-    "df1 = pd.DataFrame({'Expend': df['Expend'], 'Pres': part_resid})\n",
-    "pm1 = smf.ols('Pres ~ Expend', data=df1).fit()\n",
-    "plt.plot(df1['Expend'], pm1.fittedvalues, 'g', label='With Alaska')\n",
-    "\n",
-    "df_wo_alaska = data=df[df.index != 28]\n",
-    "model_sans_alaska = smf.ols(formula=formula, data=df_wo_alaska)\n",
-    "model_sans_alaska_fit = model_sans_alaska.fit()\n",
-    "\n",
-    "endog2 = model_sans_alaska_fit.resid + model_sans_alaska_fit.params['Expend'] * df_wo_alaska['Expend']\n",
-    "df2 = pd.DataFrame({'Expend': df_wo_alaska['Expend'], 'Pres': endog2})\n",
-    "pm2 = smf.ols('Pres ~ Expend', data=df2).fit()\n",
-    "plt.plot(df_wo_alaska['Expend'], pm2.fittedvalues, 'r', label='Without Alaska')\n",
-    "\n",
-    "plt.legend(loc='best')"
+    "fig, ax = plt.subplots(ncols=2, sharex=True, sharey=True)\n",
+    "sm.graphics.plot_partregress('SAT', 'Expend', ['logTakers', 'Rank'], data=df, obs_labels=False, ax=ax[0])\n",
+    "sm.graphics.plot_partregress('SAT', 'Expend', ['logTakers', 'Rank'], data=df.query('Expend < 40'), obs_labels=False, ax=ax[1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# Statistical Conclusion\n",
-    "The percentage of eligible students taking the test and the median class rank of the students taking the test explain 81.5% of the variation in state average test scores.  This confirms the expectation that much of the between-states variation in SAT scores can be explained by the relative quality of the students within the state who decide to take the test.  After the percentage of students in a state who take the test and the median class rank of these students are accounted for, convincing evidence exists that both state expenditures (one-sided $p$-value < 0.0001) and years of formal study in social sciences, natural sciences, and humanities (one-sided $p$-value = 0.0005) are associated with SAT averages.  Alaska had a substatially higher expenditure than other states and was excluded from the analysis.\n",
-    "\n",
-    "The ranking of states after accounting for the relative quality of students in the state who take the exam (as represented by the percentage of takers and the median class rank of the students taking the exam) is shown [above](#Ranking-After-Accounting-For-Relative-Student-Quality).  Here, the states are ordered according to the size of their residuals in the regresion of SAT scores on percentage of takers and median class rank.  For example, the SAT average for New Hampshire is 49 points higher than the estimated mean SAT for states with the same percentage of students taking the exam and median class rank.  This ranking and the ranking based on raw averages show some dramatic differences.  South Dakota ranks second in its raw SAT scores, for example, but only 2% of its eligible students took the exam.  After percentage of takers and median class rank are accounted for, South Dakota ranks 24th.\n",
-    "\n",
-    "The ranking of states after additionally accounting for state expenditure is [also shown](#Ranking-After-Accounting-For-State-Expenditure).  This ranking provides a means of gauging how states perform for the amount of money they spend.  For example, Oregon ranks 31st in its unadjusted average SAT.  But after accounting for the percentage of takers, their median class rankings, and the state's expenditure per student, it ranks 46th, indicating that its students performed below what might have been expected given the amount of money the state spends on education.\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
